--- a/templates/category.html
+++ b/templates/category.html
@@ -25,9 +25,13 @@
             });
 
             // tag 클릭 때마다 ajax호출로 수정필요
-            $('.special-subtitle').on('click', function () {
+            $('#tag_navigation').on('change', function () {
+                var checked_tags = [];
+                var checked_clicked = $('input[name=tag]:checked').next().find('.tag_image_clicked').get();
+                checked_clicked.forEach(function(val){
+                    checked_tags.push(jQuery(val).parent().prev().attr('value'));
+                });
                 // checked_tags 수정필요
-                var checked_tags = ["it", "etc"];
 
                 $.ajax({
                     url: window.location.pathname,
@@ -36,6 +40,19 @@
                     },
                     success: function (data) {
                         console.log(data['product_ids_by_tags']);
+                        if(data['product_ids_by_tags'].length ==0){
+                            $('.list-card').each(function () {
+                                $(this).show();
+                            });
+                        }
+                        else{
+                            $('.list-card').each(function () {
+                                $(this).hide();
+                            });
+                            data['product_ids_by_tags'].forEach(function(val){
+                                $('.list-card[data-id=' + val + ']').show();
+                            });
+                        }
                     }
                 })
             });
@@ -44,6 +61,92 @@
 {% endblock %}
 
 {% block jumbotron %}
+    <div id="tag_navigation_wrapper">
+        <div id="tag_navigation_title">원하는 카테고리를 선택해주세요. (중복선택 가능)</div>
+        <div id="tag_navigation">
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="all_checkbox" value="all"/>
+                <label for="all_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/all.png">
+                    <img class="tag_image_clicked" src="/static/img/all_click.png">
+                    전체
+                </label>
+            </div>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="it_checkbox" value="it"/>
+                <label for="it_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/it.png">
+                    <img class="tag_image_clicked" src="/static/img/it_click.png">
+                    IT, 기기
+                </label>
+            </div>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="food_checkbox" value="food"/>
+                <label for="food_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/food.png">
+                    <img class="tag_image_clicked" src="/static/img/food_click.png">
+                    식품/맛집
+                </label>
+            </div>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="fashion_checkbox" value="fashion"/>
+                <label for="fashion_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/fashion.png">
+                    <img class="tag_image_clicked" src="/static/img/fashion_click.png">
+                    패션/뷰티
+                </label>
+            </div>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="pet_checkbox" value="pet"/>
+                <label for="pet_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/pet.png">
+                    <img class="tag_image_clicked" src="/static/img/pet_click.png">
+                    반려동물
+                </label>
+            </div>
+            <br>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="car_checkbox" value="car"/>
+                <label for="car_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/car.png">
+                    <img class="tag_image_clicked" src="/static/img/car_click.png">
+                    자동차
+                </label>
+            </div>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="travel_checkbox" value="travel"/>
+                <label for="travel_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/travel.png">
+                    <img class="tag_image_clicked" src="/static/img/travel_click.png">
+                    여행,취미
+                </label>
+            </div>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="health_checkbox" value="health"/>
+                <label for="health_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/health.png">
+                    <img class="tag_image_clicked" src="/static/img/health_click.png">
+                    건강,의료
+                </label>
+            </div>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="interior_checkbox" value="interior"/>
+                <label for="interior_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/interior.png">
+                    <img class="tag_image_clicked" src="/static/img/interior_click.png">
+                    인테리어
+                </label>
+            </div>
+            <div class="tag_wrapper">
+                <input type="checkbox" name="tag" id="etc_checkbox" value="etc"/>
+                <label for="etc_checkbox">
+                    <img class="tag_image_before_click" src="/static/img/etc.png">
+                    <img class="tag_image_clicked" src="/static/img/etc_click.png">
+                    여행,취미
+                </label>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content %}
@@ -125,7 +228,7 @@
                         {% for product in products_rating %}
                             {% cycle '<div class="row">' '' '' '' %}
                             <a href="{{ product.get_absolute_url }}"
-                               class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
+                               class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}" data-id="{{ product.id }}">
                                 <div class="card-main-info" data-type="{{ product.sns_type }}" data-color="{{ product.sns_type_color }}">
                                   <div class="card-type">
                                     <img class="product-type-image" src="{{ product.sns_type_image_url }}" alt="{{ product.sns_type }}" />
@@ -204,7 +307,7 @@
                         {% for product in products_created %}
                             {% cycle '<div class="row">' '' '' '' %}
                             <a href="{{ product.get_absolute_url }}"
-                               class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
+                               class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}" data-id="{{ product.id }}">
                                 <div class="card-main-info" data-type="{{ product.sns_type }}" data-color="{{ product.sns_type_color }}">
                                   <div class="card-type">
                                     <img class="product-type-image" src="{{ product.sns_type_image_url }}" alt="{{ product.sns_type }}" />
