edit category social gauge part

--- a/templates/category.html
+++ b/templates/category.html
@@ -238,7 +238,7 @@
                                     </div>
                                     <div class="circle-wrapper">
                                         <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                        <ul class="circle">
+                                        <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
                                             </li>
@@ -317,7 +317,7 @@
                                     </div>
                                     <div class="circle-wrapper">
                                         <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                        <ul class="circle">
+                                        <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
                                             </li>
