account_detail star resize by changing font-size

--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -395,7 +395,7 @@
 }
 
 .seller_products_each_wrapper .list-card .card-author .card-author-info-rating i {
-    font-size: 14px;
+    font-size:0.8em;
     color: #999;
 }
 
