search input placeholder vertical align middle

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -215,6 +215,7 @@
     margin-top:3%;
     height:30px;
     vertical-align: top;
+    line-height: normal;
     text-indent: 10px;
     font-size: 13px;
 }
