--- a/static/css/home.css
+++ b/static/css/home.css
@@ -127,7 +127,7 @@
     height: 400px;
     width: 100%;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: center center;
 }
 
@@ -161,7 +161,7 @@
 
 .new_jumbotron .jumbotron_right .jumbotron_right_content{
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: center center;
     width:50%;
     height:50%;
