--- a/templates/home.html
+++ b/templates/home.html
@@ -48,6 +48,11 @@
                 stopOnHover: true,
                 pagination:false,
                 loop: true,
+                navigation:true,
+                navigationText: [
+                  "<i class='icon-chevron-left icon-white'><</i>",
+                  "<i class='icon-chevron-right icon-white'>></i>"
+                  ],
                 afterMove: function () {
                     count++;
                     if(count%5==1){
