--- a/templates/category.html
+++ b/templates/category.html
@@ -258,8 +258,8 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
-                                                    <span style="font-size:2em;">50</span>
-                                                    <span style="font-size:1em;">원</span>
+                                                    <span style="font-size:24px;">50</span>
+                                                    <span style="font-size:15px;">원</span>
                                                 </div>
                                             </div>
                                         </ul>
@@ -337,8 +337,8 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
-                                                    <span style="font-size:2em;">50</span>
-                                                    <span style="font-size:1em;">원</span>
+                                                    <span style="font-size:24px;">50</span>
+                                                    <span style="font-size:15px;">원</span>
                                                 </div>
                                             </div>
                                         </ul>
