--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -115,7 +115,7 @@
                 {% endfor %}
             </select>
         </div>
-        <form id="product-upload-form" method="POST" enctype="multipart/form-data">{% csrf_token %}
+        <form id="product-upload-form" action="" name="product_upload" method="POST" enctype="multipart/form-data">{% csrf_token %}
             {{ form.errors }}
             {{ form.non_field_errors }}
             <div class="product-upload-info">
@@ -278,7 +278,14 @@
             </div>
 
             <br>
-
+            <div id="dialog-confirm" title="승인완료">
+                승인 요청이 완료됩니다.<br>
+                1~2일 이내에 게시물이 등록됩니다.
+            </div>
+            <div class="buttons">
+                <button class="final" type="submit">동의하고 등록하기</button>
+            </div>
+            <!--
             <div class="upload-confirm-modal" data-backdrop="static"  data-keyboard="false">
                 <div class="upload-confirm-modal-title">승인완료</div>
                 <div class="upload-confirm-modal-content">
@@ -289,9 +296,7 @@
                     <button class="upload-confirm-modal-btn no" type="button">닫기</button>
                 </div>
             </div>
-            <div class="buttons">
-                <button class="final" type="button">동의하고 등록하기</button>
-            </div>
+            -->
         </form>
     </div>
 {% endblock %}
