--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -213,7 +213,7 @@
 
 .detail_content_wrapper_bot .seller_products_wrapper .seller_products_each_wrapper {
     width:90%;
-    height:100%;
+    height:76%;
     position: relative;
     left:5%;
 }
@@ -301,7 +301,7 @@
 
 .seller_products_each_wrapper .list-card .card-main-info .card-type .product-type-image{
     margin-top:4px;
-    margin-right:8px;
+    margin-right:4px;
     width:50%;
 }
 
@@ -316,7 +316,7 @@
     font-size: 11px;
     font-weight: 600;
     text-align:left;
-    line-height: 20px;
+    line-height: 16px;
     color: #333;
     z-index: 10;
     overflow:hidden;
@@ -575,11 +575,16 @@
 
 .seller_products_each_wrapper .cash{
   position:relative;
-  width:100%;
+    display: inline-block;
+    width:94%;
     height: 15%;
     left:-3%;
   padding-top:3%;
   border:1px solid grey;
   border-radius:15px;
   text-align:center;
+}
+
+.seller_products_each_wrapper .cash span {
+    margin-top:0;
 }
