--- a/templates/account/account_detail.html
+++ b/templates/account/account_detail.html
@@ -155,8 +155,8 @@
                                                 </li>
                                                 <div class="circle-mask2">
                                                     <div class="circle-mask2-text">
-                                                        <span style="font-size:1.3em;">{{ product.unit_price }}</span>
-                                                        <span style="font-size:1em;">원</span>
+                                                        <span style="font-size:18px;">{{ product.unit_price }}</span>
+                                                        <span style="font-size:12px;">원</span>
                                                     </div>
                                                 </div>
                                             </ul>
