--- a/templates/home.html
+++ b/templates/home.html
@@ -261,8 +261,8 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
-                                                    <span style="font-size:2em;">{{ product.unit_price }}</span>
-                                                    <span style="font-size:1em;">원</span>
+                                                    <span style="font-size:23px;">{{ product.unit_price }}</span>
+                                                    <span style="font-size:15px;">원</span>
                                                 </div>
                                             </div>
                                         </ul>
@@ -340,10 +340,10 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
-                                                    <span style="font-size:2em;">
+                                                    <span style="font-size:23px;">
                                                         {{ product.unit_price }}
                                                     </span>
-                                                    <span style="font-size:1em;">원</span>
+                                                    <span style="font-size:15px;">원</span>
                                                 </div>
                                             </div>
                                         </ul>
