--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -238,7 +238,7 @@
                     </div>
                     <div class="product-sns">
                         {% if product.is_url_open %}
-                            <a href="{{ product.sns_url }}">
+                            <a href="{{ product.sns_url }}" target="_blank">
                                 <img class="product-sns-image open" src="{% static 'img/house.png'%}">
                                 <button class="product-sns-text open">판매자 SNS 바로가기</button>
                             </a>
