--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -272,7 +272,7 @@
                 1~2일 이내에 게시물이 등록됩니다.
             </div>
             <div class="buttons">
-                <button class="final" type="submit">동의하고 등록하기</button>
+                <button class="final" type="button">동의하고 등록하기</button>
             </div>
             <!--
             <div class="upload-confirm-modal" data-backdrop="static"  data-keyboard="false">
