--- a/templates/account/dashboard_wishlist.html
+++ b/templates/account/dashboard_wishlist.html
@@ -96,6 +96,7 @@
             </div>
         </div>
         <div class="dashboard-wishlist">
+            {% if lists %}
                 {% for product in lists %}
                     {% cycle '<div class="row">' '' '' '' %}
                     <div class="list-card-wrapper">
@@ -191,9 +192,11 @@
                         {% endif %}
                 {% endfor %}
                </div>
+            {% else %}
                 <div class="no-wishlist">
                     앗! 아직 위시리스트가 없네요!
                 </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
