delete border-radius of cart modal button, reallocate the cart_modal's position

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -48,6 +48,7 @@
                     success: function (data) {
                         if (data['status'] == 'success') {
                             $('.cart-confirm-modal').show();
+                            $('.cart-confirm-modal').center();
                             $('.cart-confirm-modal-btn.yes').on('click', function () {
                                 window.location.href = '/dashboard/purchase/cart';
                             })
