--- a/static/css/product_detail.css
+++ b/static/css/product_detail.css
@@ -152,7 +152,7 @@ _:-ms-lang(x), .content .product-top .seller-info .seller-img img {
     margin-left:4%;
 }
 
-.seller-info-item.seller-detail-intro .seller-detail-intro-content{
+.seller-info-item.seller-detail-intro .seller-detail-intro-title{
     font-weight:bold;
 }
 
@@ -168,12 +168,12 @@ _:-ms-lang(x), .content .product-top .seller-info .seller-img img {
     margin-left:1%;
     width:24%;
     text-align: center;
+    font-weight: bold;
 }
 
 .seller-detail-info-each.bottom .seller-detail-session-sub{
     margin-top:4%;
     text-align: center;
-    font-weight: bold;
 }
 
 
@@ -187,6 +187,10 @@ _:-ms-lang(x), .content .product-top .seller-info .seller-img img {
     float: left;
     margin-top:4%;
     margin-left:4%;
+}
+
+.content .product-top .seller-info .seller-detail-info .seller-info-rating .seller-rating-title{
+    font-weight: bold;
 }
 
 .content .product-top .seller-info .seller-detail-info .seller-info-like {
