--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -168,7 +168,7 @@
                         <div class="seller-detail-info">
                             <div class="seller-detail-info-each top">
                                 <div class="seller-info-rating seller-rating">
-                                    판매자 평가
+                                    <span class="seller-rating-title">판매자 평가</span>
                                     <div class="seller-rating" data-rating="{{ product.rating }}">
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -187,7 +187,7 @@
                             </div>
                             <div class="seller-detail-info-each mid">
                                 <div class="seller-info-item seller-detail-intro">
-                                    <div>자기소개</div>
+                                    <div class="seller-detail-intro-title">자기소개</div>
                                     <div class="seller-detail-intro-content">
                                         {% if product.seller.description %}
                                             {{ product.seller.description }}
